--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -9,7 +9,7 @@ html
       .header__item PRICING MODELS
       .header__item VERTICALS
       .header__item CONTACTS
-    section.block.block--1
+    section.block.block_1
       .wrapper
         img(src=require('../images/w-profit-logo.png') width=318 height=86)
         h1 We are W-profit —
