--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -11,8 +11,9 @@ html
       .header__item CONTACTS
     section.block.block_1
       .wrapper
-        img(src=require('../images/w-profit-logo.png') width=318 height=86)
-        h1 We are W-profit —
+        img(src=require('../images/w-profit-logo.png') width=318 height=86).block_1__logo
+        h1.block_1__title We are W-profit —
+          br
           | performance media buying agency
         .block_1__items
           .block_1__item
