--- a/source/style/_variables.scss
+++ b/source/style/_variables.scss
@@ -2,6 +2,8 @@
 $header-red: #ff0056;
 $header-border-hover: #950334;
 $white: #ffffff;
+$block-1-border: #cad9e4;
+$grey: #626262;
 
 $transition-common: all 0.3s ease;
 
