--- a/source/style/_block-1.scss
+++ b/source/style/_block-1.scss
@@ -6,5 +6,52 @@
     align-items: center;
     justify-content: center;
   }
-
+  &__logo {
+    margin-bottom: 115px;
+  }
+  &__title {
+    text-align: center;
+    font-family: "Roboto Condensed", sans-serif;
+    font-size: 2.11rem;
+    letter-spacing: 7px;
+    line-height: 1.5;
+    text-transform: uppercase;
+    margin-bottom: 70px;
+  }
+  &__items {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+  }
+  &__item {
+    text-align: center;
+    padding: 5px 60px;
+    flex: 0 0 auto;
+    position: relative;
+    span {
+      position: absolute;
+      bottom: -25px;
+      left: 0;
+      right: 0;
+      text-align: center;
+      color: $grey;
+      font-size: 0.875rem;
+    }
+    &:nth-child(2) {
+      &:before, &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        height: 100%;
+        width: 1px;
+        background: $block-1-border;
+      }
+      &:before {
+        left: 0;
+      }
+      &:after {
+        right: 0;
+      }
+    }
+  }
 }
