--- a/source/style/_fonts.scss
+++ b/source/style/_fonts.scss
@@ -1,1 +1,2 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400&amp;subset=cyrillic');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&amp;subset=cyrillic');
