--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -12,7 +12,7 @@ html
     section.block.block_1
       .wrapper
         img(src=require('../images/w-profit-logo.png') width=318 height=86).block_1__logo
-        h1.block_1__title We are W-profit —
+        h1.title.block_1__title We are W-profit —
           br
           | performance media buying agency
         .block_1__items
@@ -23,3 +23,27 @@ html
             span up to 40 000 installs daily
           .block_1__item
             p In-house creatives production team
+    section.block.block_2
+      .wrapper
+        h1.title.block_2__title TRAFFIC SOURCES
+        .block_2__items
+          .block_2__item
+            img(src=require('../images/facebook.png') width=102 height=102).block_2__icon
+            p.block_2__caption Facebook
+          .block_2__item
+            img(src=require('../images/instagram.png') width=102 height=102).block_2__icon
+            p.block_2__caption Instagram
+          .block_2__item
+            img(src=require('../images/facebook-network.png') width=102 height=102).block_2__icon
+            p.block_2__caption Facebook
+              br
+              | Audience network
+          .block_2__item
+            img(src=require('../images/snapchat.png') width=102 height=102).block_2__icon
+            p.block_2__caption Snapchat
+          .block_2__item
+            img(src=require('../images/google.png') width=102 height=102).block_2__icon
+            p.block_2__caption Google
+          .block_2__item
+            img(src=require('../images/applovin.png') width=102 height=102).block_2__icon
+            p.block_2__caption Applovin
