--- a/source/style/_common.scss
+++ b/source/style/_common.scss
@@ -21,3 +21,13 @@ html {
   width: 100%;
   margin: 0 auto;
 }
+
+.title{
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 2.11rem;
+  letter-spacing: 7px;
+  line-height: 1.5;
+  text-transform: uppercase;
+  margin-bottom: 70px;
+}
