--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -47,3 +47,18 @@ html
           .block_2__item
             img(src=require('../images/applovin.png') width=102 height=102).block_2__icon
             p.block_2__caption Applovin
+    section.block.block_3
+      .wrapper
+        h1.title.block_3__title pricing models
+        .block_3__items
+          .block_3__item
+            .block_3__caption CPI
+            .block_3__text cost per install
+          .block_3__item
+            .block_3__caption CPL
+            .block_3__text cost per lead
+          .block_3__item
+            .block_3__caption CPS
+            .block_3__text cost per sale
+          .block_3__item
+            .block_3__caption Revenue share
