--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -62,3 +62,19 @@ html
             .block_3__text cost per sale
           .block_3__item
             .block_3__caption Revenue share
+    section.block.block_4
+      .wrapper
+        h1.title.block_4__title Verticals
+        .block_4__items
+          .block_4__item
+            img(src=require('../images/verticals-1.png')).block_4__logo
+            p.block_4__caption E-commerce
+          .block_4__item
+            img(src=require('../images/verticals-2.png')).block_4__logo
+            p.block_4__caption Games
+          .block_4__item
+            img(src=require('../images/verticals-3.png')).block_4__logo
+            p.block_4__caption Utilities
+          .block_4__item
+            img(src=require('../images/verticals-4.png')).block_4__logo
+            p.block_4__caption Travel
