--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -78,3 +78,25 @@ html
           .block_4__item
             img(src=require('../images/verticals-4.png')).block_4__logo
             p.block_4__caption Travel
+    section.block.block_5
+      .wrapper
+        h1.title.block_5__title
+        .block_5__content
+          .block_5__content_item
+            .block_5__line Prevezis 13 Flat/Office 101 Nicosia,
+              br
+              |1065 Cyprus
+            .block_5__line +7 927 0077657
+          .block_5__content_item
+            a(href='mailto:hello@w-profit.com').block_5__link hello@w-profit.com
+            a(href='#' target='_blank').block_5__link Career
+          .block_5__content_item
+            .blocK_5__small_text W-profit is a mobile ad tech agency. We are dedicated to empowering our partners with sophisticated solutions that make it simple for app developers to connect with target audiences.
+              br
+              br
+              |© 2018 W-profit LTD – All rights reserved.
+          .block_5__content_item
+            a(href='#' target='_blank')
+              img(src=require('../images/linkedin.png'))
+            a(href='#' target='_blank')
+              img(src=require('../images/facebook-2.png'))
