--- a/source/style/_variables.scss
+++ b/source/style/_variables.scss
@@ -4,6 +4,7 @@ $header-border-hover: #950334;
 $white: #ffffff;
 $block-1-border: #cad9e4;
 $grey: #626262;
+$blue: #1781ff;
 
 $transition-common: all 0.3s ease;
 
