--- a/source/style/_variables.scss
+++ b/source/style/_variables.scss
@@ -2,6 +2,7 @@
 $header-red: #ff0056;
 $header-border-hover: #950334;
 $white: #ffffff;
+$white-opacity: rgba(255, 255, 255, 0.6);
 $block-1-border: #cad9e4;
 $grey: #626262;
 $blue: #1781ff;
