--- a/source/style/_block-2.scss
+++ b/source/style/_block-2.scss
@@ -14,8 +14,14 @@
     align-items: center;
     flex: 0 0 calc(100% / 3);
     margin-bottom: 130px;
+    @media (max-width: $tablet-bp) {
+      margin-bottom: 100px;
+    }
     img {
       margin-bottom: 70px;
+      @media (max-width: $tablet-bp) {
+        margin-bottom: 35px;
+      }
     }
     p {
       text-align: center;
