--- a/source/style/_block-4.scss
+++ b/source/style/_block-4.scss
@@ -1,20 +1,38 @@
 .block_4 {
   padding-top: 270px;
   padding-bottom: 220px;
+  @media (max-width: $tablet-bp) {
+    padding-top: 80px;
+    padding-bottom: 0;
+  }
   &__items {
     padding-top: 80px;
     display: flex;
     justify-content: space-between;
+    @media (max-width: $tablet-bp) {
+      padding-top: 0;
+      flex-wrap: wrap;
+    }
   }
   &__item {
     display: flex;
     flex-direction: column;
     align-items: center;
     flex: 0 0 25%;
+    @media (max-width: $tablet-bp) {
+      flex-direction: row;
+      justify-content: space-around;
+      flex: 0 0 calc(50% - 40px);
+      margin-bottom: 70px;
+    }
   }
   &__logo {
     flex: 1 1 80px;
     margin-bottom: 50px;
+    @media (max-width: $tablet-bp) {
+      margin-bottom: 0;
+      flex: 0 0 80px;
+    }
   }
   &__caption {
     font-size: 1.388rem;
