--- a/source/style/_block-5.scss
+++ b/source/style/_block-5.scss
@@ -2,17 +2,27 @@
   padding: 135px 0 130px;
   background: url(../images/block-5-bg.svg) $blue;
   color: $white;
+  @media (max-width: $tablet-bp) {
+    padding: 90px 0;
+  }
   .wrapper {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    @media (max-width: $tablet-bp) {
+      padding-left: 60px;
+      padding-right: 60px;
+    }
   }
   &__content {
     width: 60%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    @media (max-width: $tablet-bp) {
+      width: 100%;
+    }
     &_item {
       flex: 0 0 calc(50% - 70px);
       margin-bottom: 100px;
