--- a/source/style/_header.scss
+++ b/source/style/_header.scss
@@ -10,6 +10,20 @@
   color: $white;
   width: 100%;
   z-index: 2;
+  &--desktop {
+    @media (max-width: $tablet-bp) {
+      display: none;
+    }
+  }
+  &--mobile {
+    display: none;
+    @media (max-width: $tablet-bp) {
+      display: flex;
+      justify-content: flex-start;
+      background: transparent;
+
+    }
+  }
   &__item {
     margin: 0 20px;
     cursor: pointer;
