--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -2,7 +2,7 @@ html
   head
     title W-Profit
     meta(name='viewport' content='width=device-width, initial-scale=1')
-    link(rel='stylesheet' href='/style.css')
+    link(rel='stylesheet' href='/assets/css/style.css')
     script(defer src='/assets/js/index.js')
   body
     header.header.header--desktop
@@ -20,6 +20,7 @@ html
         .header__m_menu__item(data-rel="block_4") VERTICALS
         .header__m_menu__item(data-rel="block_5") CONTACTS
     section.block.block_1
+      img(src=require('../images/block-1-bg.svg')).block_1__bg
       .wrapper
         img(src=require('../images/w-profit-logo.png') width=318 height=86).block_1__logo
         h1.title.block_1__title We are W-profit —
@@ -58,6 +59,7 @@ html
             img(src=require('../images/applovin.png') width=102 height=102).block_2__icon
             p.block_2__caption Applovin
     section.block.block_3
+      img(src=require('../images/block-3-bg.svg')).block_3__bg
       .wrapper
         h1.title.block_3__title pricing models
         .block_3__items
