--- a/source/style/_block-1.scss
+++ b/source/style/_block-1.scss
@@ -1,4 +1,17 @@
 .block_1 {
+  position: relative;
+  @media (max-width: $tablet-bp) {
+    overflow-x: hidden;
+  }
+  &__bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 110%;
+    z-index: -1;
+  }
   .wrapper {
     padding: 170px 0 0;
     display: flex;
@@ -8,18 +21,39 @@
     @media (max-width: $tablet-bp) {
       padding: 75px 15px 0;
     }
+    @media (max-width: $mobile-bp) {
+      padding: 60px 15px 0;
+    }
+  }
+  &__title {
+    background: $white;
+    padding: 50px 0 70px;
+    margin-bottom: 0;
   }
   &__logo {
-    margin-bottom: 115px;
+    margin-bottom: 65px;
+    @media (max-width: $mobile-bp) {
+      max-width: 220px;
+      height: auto;
+      margin-bottom: 50px;
+    }
   }
   &__items {
     display: flex;
     justify-content: space-between;
     width: 90%;
+    background: $white;
+    padding: 50px 0 50px;
+    @media (max-width: $mobile-bp) {
+      flex-direction: column;
+    }
   }
   &__title {
     @media (max-width: $tablet-bp) {
       font-size: 1.72rem;
+    }
+    @media (max-width: $mobile-bp) {
+      font-size: 1.27rem;
     }
   }
   &__item {
@@ -30,6 +64,9 @@
     @media (max-width: $tablet-bp) {
       padding: 5px 15px;
       flex: 0 0 calc(100% / 3);
+    }
+    @media (max-width: $mobile-bp) {
+      margin-bottom: 50px;
     }
     span {
       position: absolute;
@@ -42,8 +79,15 @@
       @media (max-width: $tablet-bp) {
         bottom: -5px;
       }
+      @media (max-width: $mobile-bp) {
+        font-size: 0.777rem;
+        bottom: -30px;
+      }
     }
     &:nth-child(2) {
+      @media (max-width: $mobile-bp) {
+        margin-bottom: 90px;
+      }
       &:before, &:after {
         content: '';
         position: absolute;
@@ -54,12 +98,28 @@
         @media (max-width: $tablet-bp) {
           height: 55%;
         }
+        @media (max-width: $mobile-bp) {
+          height: 1px;
+          width: 30px;
+          left: 0;
+          right: 0;
+        }
       }
       &:before {
         left: 0;
+        @media (max-width: $mobile-bp) {
+          bottom: auto;
+          top: -25px;
+          left: calc(50% - 15px);
+        }
       }
       &:after {
         right: 0;
+        @media (max-width: $mobile-bp) {
+          top: auto;
+          bottom: -60px;
+          left: calc(50% - 15px);
+        }
       }
     }
   }
