--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -1,8 +1,13 @@
 html
   head
-    title W-Profit
+    title W-profit media buying agency
     meta(name='viewport' content='width=device-width, initial-scale=1')
+    meta(charset='utf-8')
     link(rel='stylesheet' href='/assets/css/style.css')
+    ling(rel='shortcut icon' type='image/png' href=require('../images/w_profit_favicon.png'))
+    meta(property='og:title' content='W-profit media buying agency')
+    meta(property='og:description' content='W-profit is a media buying agency, that offers a wide range of traffic sources, including social, in-app and much more.')
+    meta(property='og:image' content='http://w-profit.com/logo.png')
     script(defer src='/assets/js/index.js')
   body
     header.header.header--desktop
@@ -101,14 +106,14 @@ html
             .block_5__line +7 927 0077657
           .block_5__content_item
             a(href='mailto:hello@w-profit.com').block_5__link hello@w-profit.com
-            a(href='#' target='_blank').block_5__link Career
+            a(href='https://cyprus.hh.ru/employer/3406479' target='_blank').block_5__link Career
           .block_5__content_item
             .block_5__small_text W-profit is a mobile ad tech agency. We are dedicated to empowering our partners with sophisticated solutions that make it simple for app developers to connect with target audiences.
               br
               br
               |© 2018 W-profit LTD – All rights reserved.
           .block_5__content_item
-            a(href='#' target='_blank')
+            a(href='https://www.linkedin.com/company/w-profit' target='_blank')
               img(src=require('../images/linkedin.png'))
-            a(href='#' target='_blank')
+            a(href='https://www.facebook.com/W-profit-443121196113356/' target='_blank')
               img(src=require('../images/facebook-2.png'))
