--- a/source/style/_block-5.scss
+++ b/source/style/_block-5.scss
@@ -60,6 +60,8 @@
   }
   &__line {
     line-height: 1.5;
+    text-decoration: none;
+    color: $white;
     &:first-child {
       margin-bottom: 60px;
     }
