--- a/source/style/_block-4.scss
+++ b/source/style/_block-4.scss
@@ -1,7 +1,9 @@
 .block_4 {
-  padding-top: 270px;
+  margin-top: 170px;
+  padding-top: 100px;
   padding-bottom: 220px;
   @media (max-width: $tablet-bp) {
+    margin-top: 0;
     padding-top: 80px;
     padding-bottom: 0;
   }
