--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -4,7 +4,9 @@ html
     meta(name='viewport' content='width=device-width, initial-scale=1')
     meta(charset='utf-8')
     link(rel='stylesheet' href='/assets/css/style.css')
-    ling(rel='shortcut icon' type='image/png' href=require('../images/w_profit_favicon.png'))
+    ling(rel='icon' type='image/x-icon' href='favicon.ico?v=2')
+    ling(rel='icon' type='image/png' href='favicon-32x32.png?v=2' sizes='32x32')
+    ling(rel='icon' type='image/png' href='favicon-16x16.png?v=2' sizes='16x16')
     meta(property='og:title' content='W-profit media buying agency')
     meta(property='og:description' content='W-profit is a media buying agency, that offers a wide range of traffic sources, including social, in-app and much more.')
     meta(property='og:image' content='http://w-profit.com/logo.png')
