--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -89,16 +89,16 @@ html
         h1.title.block_4__title Verticals
         .block_4__items
           .block_4__item
-            img(src=require('../images/verticals-1.png')).block_4__logo
+            img(src=require('../images/2.svg')).block_4__logo
             p.block_4__caption E-commerce
           .block_4__item
-            img(src=require('../images/verticals-2.png')).block_4__logo
+            img(src=require('../images/4.svg')).block_4__logo
             p.block_4__caption Games
           .block_4__item
-            img(src=require('../images/verticals-3.png')).block_4__logo
+            img(src=require('../images/1.svg')).block_4__logo
             p.block_4__caption Utilities
           .block_4__item
-            img(src=require('../images/verticals-4.png')).block_4__logo
+            img(src=require('../images/3.svg')).block_4__logo
             p.block_4__caption Travel
     section.block.block_5
       .wrapper
