--- a/source/pages/index.pug
+++ b/source/pages/index.pug
@@ -32,7 +32,7 @@ html
       img(src=require('../images/block-1-bg-t.png')).block_1__bg.block_1__bg--tablet
       img(src=require('../images/block-1-bg-m.png')).block_1__bg.block_1__bg--mobile
       .wrapper
-        img(src=require('../images/w-profit-logo.png') width=318 height=86).block_1__logo
+        img(src=require('../images/w_profit_logo.svg') width=394 height=155).block_1__logo
         h1.title.block_1__title We are W-profit —
           br
           | performance media buying agency
@@ -49,24 +49,24 @@ html
         h1.title.block_2__title TRAFFIC SOURCES
         .block_2__items
           .block_2__item
-            img(src=require('../images/facebook.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_5.svg') width=102 height=102).block_2__icon
             p.block_2__caption Facebook
           .block_2__item
-            img(src=require('../images/instagram.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_4.svg') width=102 height=102).block_2__icon
             p.block_2__caption Instagram
           .block_2__item
-            img(src=require('../images/facebook-network.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_1.svg') width=102 height=102).block_2__icon
             p.block_2__caption Facebook
               br
               | Audience network
           .block_2__item
-            img(src=require('../images/snapchat.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_6.svg') width=102 height=102).block_2__icon
             p.block_2__caption Snapchat
           .block_2__item
-            img(src=require('../images/google.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_2.svg') width=102 height=102).block_2__icon
             p.block_2__caption Google
           .block_2__item
-            img(src=require('../images/applovin.png') width=102 height=102).block_2__icon
+            img(src=require('../images/logo_3.svg') width=102 height=102).block_2__icon
             p.block_2__caption Applovin
     section.block.block_3
       img(src=require('../images/block-3-bg.svg')).block_3__bg
@@ -119,6 +119,6 @@ html
               |© 2018 W-profit LTD – All rights reserved.
           .block_5__content_item
             a(href='https://www.linkedin.com/company/w-profit' target='_blank')
-              img(src=require('../images/linkedin.png'))
+              img(src=require('../images/in.svg') width=37 height=37)
             a(href='https://www.facebook.com/W-profit-443121196113356/' target='_blank')
-              img(src=require('../images/facebook-2.png'))
+              img(src=require('../images/fb.svg') width=37 height=37)
